# academic-forum-bot

./: .editorconfig  .gitignore  Cargo.toml  README.md  deploy  rustfmt.toml
.github/workflows/: check.yml
src/: event_handler.rs  main.rs  util.rs
src/commands/: doxx.rs  heheheha.rs  help.rs  mod.rs  register.rs  troll.rs
src/events/: message.rs  mod.rs
