[package]
name = "academic_forum_bot_rewrite"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.57"
default = "0.1.2"
dotenv = "0.15.0"
lazy_static = "1.4.0"
poise = "0.3.0"

[dependencies.tokio]
version = "1.20.1"
features = ["full"]

[profile.release]
codegen-units = 1
lto = true
strip = true
