[package]
name = "academic_forum_bot"
version = "1.0.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
default = "0.1"
dotenv = "0.15"
lazy_static = "1"
poise = "0.3"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.tokio]
version = "1"
features = ["full"]

[profile.release]
codegen-units = 1
lto = true
strip = true
